[#384] fixed scrollbar

--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -28,7 +28,11 @@
   border-right: 2px solid #f3f4f6;
   width: 20vw;
   padding: 16px 25px;
+  height: 90vh;
+  flex-direction: column;
+  overflow: auto;
 }
+
 .declined-event {
   opacity: 0.7;
 }
